--- a/.pylintrc
+++ b/.pylintrc
@@ -64,6 +64,8 @@ disable=
     missing-docstring,
     invalid-name,
     redefined-outer-name,
+    too-many-ancestors,
+    duplicate-code,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
