--- a/.pylintrc
+++ b/.pylintrc
@@ -66,6 +66,7 @@ disable=
     redefined-outer-name,
     too-many-ancestors,
     duplicate-code,
+    unused-argument,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
