--- a/.pylintrc
+++ b/.pylintrc
@@ -67,6 +67,7 @@ disable=
     too-many-ancestors,
     unused-argument,
     undefined-loop-variable,
+    no-name-in-module,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
