--- a/.pylintrc
+++ b/.pylintrc
@@ -65,8 +65,8 @@ disable=
     invalid-name,
     redefined-outer-name,
     too-many-ancestors,
-    duplicate-code,
     unused-argument,
+    undefined-loop-variable,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
