Add load form and validation

--- a/.pylintrc
+++ b/.pylintrc
@@ -68,6 +68,7 @@ disable=
     unused-argument,
     undefined-loop-variable,
     no-name-in-module,
+    global-statement,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
