--- a/.pylintrc
+++ b/.pylintrc
@@ -69,6 +69,7 @@ disable=
     undefined-loop-variable,
     no-name-in-module,
     global-statement,
+    no-member,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
