--- a/.github/workflows/pypi-deploy.yml
+++ b/.github/workflows/pypi-deploy.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
     steps:
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@master
