Add custom form widget with custom footer text

--- a/.pylintrc
+++ b/.pylintrc
@@ -70,6 +70,7 @@ disable=
     no-name-in-module,
     global-statement,
     no-member,
+    super-with-arguments,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
