--- a/.pylintrc
+++ b/.pylintrc
@@ -72,6 +72,8 @@ disable=
     no-member,
     super-with-arguments,
     attribute-defined-outside-init,
+    duplicate-code,
+    too-many-branches,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
