--- a/.pylintrc
+++ b/.pylintrc
@@ -77,6 +77,7 @@ disable=
     assignment-from-no-return,
     too-many-instance-attributes,
     inconsistent-return-statements,
+    unbalanced-tuple-unpacking,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
